feat: 完成前端联调测试与优化
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>